[package]
name = "archaic-word-finder"
version = "1.1.0"
edition = "2024"
authors = ["Research Team"]
description = "High-performance pre-reform and custom symbol word detector with stemming and Bloom-filter acceleration."

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"  # Убедитесь, что версия >= 0.17.0
rayon = "1.11"
bloomfilter = "1.0"
rust-stemmers = "1.2"
unicode-segmentation = "1.11"
walkdir = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
regex = "1.12"
